fixed textalign in justify-grid

--- a/src/scss/partials/_grid_justify.scss
+++ b/src/scss/partials/_grid_justify.scss
@@ -17,6 +17,7 @@
     list-style-type:none;
     border:0;
     outline:0;
+    text-align:left;
     //overflow:hidden;
     .title, .label {
       line-height:1em;
